--- a/css/products.css
+++ b/css/products.css
@@ -32,6 +32,7 @@
     opacity: 0;
     transition: all 0.3s ease-in-out;
     visibility: hidden;
+    text-align: center;
     margin-bottom: 2rem;
 }
 .success-message--active {
