--- a/css/order.css
+++ b/css/order.css
@@ -149,6 +149,7 @@ option {
     left: 0;
     top: .5rem;
     background-color: var(--main-bg-color);
+    background-color: transparent;
     transition: all .3s ease-in-out;
 }
 select {
